--- a/app/src/main/res/layout-w900dp/city_list.xml
+++ b/app/src/main/res/layout-w900dp/city_list.xml
@@ -1,38 +1,44 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:layout_marginLeft="16dp"
-              android:layout_marginRight="16dp"
-              android:baselineAligned="false"
-              android:divider="?android:attr/dividerHorizontal"
-              android:orientation="horizontal"
-              android:showDividers="middle"
-              tools:context="com.owsega.citydirectory.CityListActivity">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    android:baselineAligned="false"
+    android:divider="?android:attr/dividerHorizontal"
+    android:orientation="horizontal"
+    android:showDividers="middle"
+    tools:context="com.owsega.citydirectory.CityListActivity">
 
     <!--
     This layout is a two-pane layout for the Cities
     master/detail flow.
-    
+
     -->
 
-    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-                                            xmlns:tools="http://schemas.android.com/tools"
-                                            android:id="@+id/city_list"
-                                            android:name="com.owsega.citydirectory.CityListFragment"
-                                            android:layout_width="@dimen/item_width"
-                                            android:layout_height="match_parent"
-                                            android:layout_marginLeft="16dp"
-                                            android:layout_marginRight="16dp"
-                                            app:layoutManager="LinearLayoutManager"
-                                            tools:context="com.owsega.citydirectory.CityListActivity"
-                                            tools:listitem="@layout/city_list_content"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/city_list"
+        android:name="com.owsega.citydirectory.CityListFragment"
+        android:layout_width="@dimen/item_width"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        app:layoutManager="LinearLayoutManager"
+        tools:context="com.owsega.citydirectory.CityListActivity"
+        tools:listitem="@layout/city_list_content"/>
 
     <FrameLayout
         android:id="@+id/city_detail_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="3"/>
+        android:layout_weight="3">
+
+        <View
+            android:id="@+id/two_pane_mode"
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
+    </FrameLayout>
 
 </LinearLayout>
