--- a/app/src/main/res/layout/city_list.xml
+++ b/app/src/main/res/layout/city_list.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-                                        xmlns:app="http://schemas.android.com/apk/res-auto"
-                                        xmlns:tools="http://schemas.android.com/tools"
-                                        android:id="@+id/city_list"
-                                        android:name="com.owsega.citydirectory.CityListFragment"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_marginLeft="16dp"
-                                        android:layout_marginRight="16dp"
-                                        app:layoutManager="LinearLayoutManager"
-                                        tools:context="com.owsega.citydirectory.CityListActivity"
-                                        tools:listitem="@layout/city_list_content"/>
+<ViewSwitcher
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/view_switcher"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    tools:context="com.owsega.citydirectory.CityListActivity">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/city_list"
+        android:name="com.owsega.citydirectory.CityListFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="LinearLayoutManager"
+        tools:listitem="@layout/city_list_content"/>
+
+    <FrameLayout
+        android:id="@+id/city_detail_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</ViewSwitcher>
