--- a/app/src/main/res/layout-w900dp/city_list.xml
+++ b/app/src/main/res/layout-w900dp/city_list.xml
@@ -10,7 +10,7 @@
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
     android:showDividers="middle"
-    tools:context="com.owsega.citydirectory.CityListActivity">
+    tools:context="com.owsega.citydirectory.view.CityListActivity">
 
     <!--
     This layout is a two-pane layout for the Cities
@@ -26,7 +26,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
-        tools:context="com.owsega.citydirectory.CityListActivity"
+        tools:context="com.owsega.citydirectory.view.CityListActivity"
         tools:listitem="@layout/city_list_content"/>
 
     <FrameLayout
