--- a/app/src/main/res/layout/city_list.xml
+++ b/app/src/main/res/layout/city_list.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    tools:context="com.owsega.citydirectory.CityListActivity">
+    tools:context="com.owsega.citydirectory.view.CityListActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/city_list"
