--- a/app/src/main/res/layout-w900dp/city_list.xml
+++ b/app/src/main/res/layout-w900dp/city_list.xml
@@ -4,8 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
     android:baselineAligned="false"
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
@@ -23,8 +21,8 @@
         android:name="com.owsega.citydirectory.CityListFragment"
         android:layout_width="@dimen/item_width"
         android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         app:layoutManager="LinearLayoutManager"
         tools:context="com.owsega.citydirectory.view.CityListActivity"
         tools:listitem="@layout/city_list_content"/>
@@ -33,6 +31,8 @@
         android:id="@+id/city_detail_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_weight="3">
 
         <View
