--- a/app/src/main/res/layout/city_list.xml
+++ b/app/src/main/res/layout/city_list.xml
@@ -6,8 +6,6 @@
     android:id="@+id/view_switcher"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
     tools:context="com.owsega.citydirectory.view.CityListActivity">
 
     <android.support.v7.widget.RecyclerView
@@ -15,11 +13,15 @@
         android:name="com.owsega.citydirectory.CityListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         app:layoutManager="LinearLayoutManager"
         tools:listitem="@layout/city_list_content"/>
 
     <FrameLayout
         android:id="@+id/city_detail_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"/>
 </ViewSwitcher>
