--- a/app/src/main/res/layout-w900dp/city_list.xml
+++ b/app/src/main/res/layout-w900dp/city_list.xml
@@ -16,14 +16,30 @@
 
     -->
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/city_list"
-        android:name="com.owsega.citydirectory.CityListFragment"
-        android:layout_width="@dimen/item_width"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="LinearLayoutManager"
-        tools:context="com.owsega.citydirectory.view.CityListActivity"
-        tools:listitem="@layout/city_list_content"/>
+        android:orientation="vertical">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:hint="@string/search"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/city_list"
+            android:name="com.owsega.citydirectory.CityListFragment"
+            android:layout_width="@dimen/item_width"
+            android:layout_height="match_parent"
+            app:layoutManager="LinearLayoutManager"
+            tools:context="com.owsega.citydirectory.view.CityListActivity"
+            tools:listitem="@layout/city_list_content"/>
+
+    </LinearLayout>
+
 
     <FrameLayout
         android:id="@+id/city_detail_container"
@@ -31,12 +47,6 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_weight="3">
-
-        <View
-            android:id="@+id/two_pane_mode"
-            android:layout_width="0dp"
-            android:layout_height="0dp"/>
-    </FrameLayout>
+        android:layout_weight="3"/>
 
 </LinearLayout>
