--- a/app/src/main/res/layout/city_list.xml
+++ b/app/src/main/res/layout/city_list.xml
@@ -30,10 +30,12 @@
             tools:listitem="@layout/city_list_content"/>
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/city_detail_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"/>
+    <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
+              android:id="@+id/city_map"
+              class="com.google.android.gms.maps.SupportMapFragment"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:layout_marginLeft="16dp"
+              android:layout_marginRight="16dp"
+              map:cameraZoom="7"/>
 </ViewSwitcher>
