--- a/app/src/main/res/layout/activity_city_list.xml
+++ b/app/src/main/res/layout/activity_city_list.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.owsega.citydirectory.view.CityListActivity">
+    tools:context="com.owsega.citydirectory.CityListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
