--- a/app/src/main/res/layout/city_list.xml
+++ b/app/src/main/res/layout/city_list.xml
@@ -6,7 +6,7 @@
     android:id="@+id/view_switcher"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.owsega.citydirectory.view.CityListActivity">
+    tools:context="com.owsega.citydirectory.CityListActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
